[package]
name = "fltk-fluid"
version = "0.1.0"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
build = "build.rs"
edition = "2018"
description = "Rust wrapper for fltk's fluid (RAD tool)"
repository = "https://github.com/MoAlyousef/fltk-rs-fluid"
keywords = ["gui", "bindings", "graphics"]
license = "MIT"

[build-dependencies]
cmake = "0.1.45"