[package]
name = "fltk-fluid"
version = "0.1.4"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
build = "build.rs"
edition = "2018"
description = "Rust wrapper for fltk's fluid (RAD tool)"
repository = "https://github.com/fltk-rs/fluid"
keywords = ["gui", "rad", "fltk"]
categories = ["gui", "development-tools"]
readme = "README.md"
license = "MIT"

[build-dependencies]
cmake = "0.1.45"